--- a/seminars/tasks_mimi.ipynb
+++ b/seminars/tasks_mimi.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "sporting-jefferson",
    "metadata": {},
    "source": [
     "## Подготовка к К/Р. Мировая экономика"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "racial-conservation",
    "metadata": {},
    "source": [
     "### Удаление гласных \n",
@@ -20,7 +18,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "attended-scenario",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +26,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "threatened-upset",
    "metadata": {},
    "source": [
     "### Накопленная сумма\n",
@@ -41,7 +37,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "relative-raise",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +45,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "parallel-strip",
    "metadata": {},
    "source": [
     "### Кол-во отпусков\n",
@@ -61,7 +55,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "athletic-vienna",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +77,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "gorgeous-determination",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +85,93 @@
   },
   {
    "cell_type": "markdown",
-   "id": "static-hopkins",
+   "metadata": {},
+   "source": [
+    "### Одинаковые строки"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Напишите функцию, которая приенимает на вход две строки и возвращает True, если перестановкой символов можно получить вторую строку из первой."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    ">>> is_isomorphic('foo', 'bar')\n",
+    "False\n",
+    ">>> is_isomorphic('foo', 'oof')\n",
+    "True\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_isomorphic(a, b):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.5 Последовательность ДНК"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Последовательность ДНК содержит четыре вида символов: 'A', 'C', 'G', и 'T'.\n",
+    "Напишите функцию, которая будет возращать все подпоследовательности длины 10, которые встретились чаще одного раза."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### ваш код:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Архивирование"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "На вход подается строка, нужно \"заархивировать ее\".\n",
+    "\n",
+    "In: \"AAAABBBCDDD\"\n",
+    "\n",
+    "Out: \"A4B3CD3\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### ваш код:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Поиск знаменитости*\n",
@@ -104,7 +182,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "sapphire-sleeping",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +196,6 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "designing-mambo",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +219,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   },
   "varInspector": {
    "cols": {
